k8s/shop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop
  namespace: shop
spec:
  selector:
    app: shop
  ports:
    - port: 80
      targetPort: 8080
